Ignore import/dev dependencies in eslint

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
   ],
   "rules": {
     "strict": 0,
-    "comma-dangle": ["error", "never"]
+    "comma-dangle": ["error", "never"],
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
   }
 }
